--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,17 @@
   }
 
   .header {
-      padding: 30px;
+      padding: 3rem;
       color: white;
       background-image: linear-gradient( 109.6deg,  rgba(0,0,0,1) 11.2%, rgba(11,132,145,1) 91.1% );
   } 
+
+  nav.header h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
 
   .btn-grad {background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%)}
   .btn-grad {
@@ -33,4 +40,21 @@
   
 .heavy-font {
     font-weight: 700;
+}
+
+p {
+  font-size: .8rem;
+  color: white;
+}
+
+h1 {
+  align-content: center;
+}
+
+h2 {
+  font-size: 1.2rem;
+}
+
+h3 {
+  font-size: 1rem;
 }
