--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,8 @@
     justify-content: center;
   }
 
-
   .btn-grad {background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%)}
+
   .btn-grad {
      margin: 10px;
      padding: 15px 45px;
@@ -58,3 +58,67 @@ h2 {
 h3 {
   font-size: 1rem;
 }
+
+#city-box {
+  border: 1px solid #1f1f1f;
+  border-radius: 16px;
+  padding: 32px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #fff;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.temp {
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+}
+
+#five-day {
+  padding: 32px 0;
+  text-align: center;
+}
+
+.card {
+  border: 1px solid #1f1f1f;
+  border-radius: 16px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 16px;
+  background-color: rgb(11,132,145);
+}
+
+.uvFavorable {
+  border: 1 px solid #1f1f1f;
+  border-radius: 16px;
+  background-color: lightgreen;
+  width: fit-content;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin: 0 auto;
+}
+
+.uvModerate {
+  border: 1 px solid #1f1f1f;
+  border-radius: 16px;
+  background-color: yellow;
+  width: fit-content;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin: 0 auto;
+}
+
+.uvSevere {
+  border: 1 px solid #1f1f1f;
+  border-radius: 16px;
+  background-color: tomato;
+  width: fit-content;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin: 0 auto;
+}
+
+footer {
+  text-align: center;
+}
+
